# knowledge-mcp

./: .gitignore  LICENSE  README.md  knowledge_mcp.toml.example  pyproject.toml
knowledge_mcp/: __init__.py  chunking.py  config.py  embed.py  indexer.py  search.py  server.py  types.py  vault.py  watcher.py
knowledge_mcp/storage/: fts.py  vectors.py
scripts/: gc.py  reindex.py
tests/: conftest.py  test_chunking.py  test_embed.py  test_fts.py  test_search.py  test_server.py  test_vectors.py  test_watcher.py
